--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">Ilya Panov</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
         </span>
@@ -70,7 +70,7 @@
           <div class="subheading mb-5">HSE SPB Student '28 · AMI · 
             <a href="mailto:iapanov@edu.hse.ru">iapanov@edu.hse.ru</a>
           </div>
-          <p class="mb-5">I'm an aspiring developer. I am constantly learning something new. I love challenging and interesting tasks!</p>
+          <p class="mb-5">I am an aspiring game developer. I have experience working in a team and participating in Game Jams. I am well versed in building game architecture and using patterns!</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://t.me/mirotvoretts">
@@ -113,7 +113,7 @@
               <div>Applied mathematics and informatics</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2024 - 20 June</span>
+              <span class="text-primary">September 2024 - present</span>
             </div>
           </div>
 
@@ -140,9 +140,6 @@
             </li>
             <li class="list-inline-item">
               <i class="devicon-blender-original"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicon-photoshop-plain"></i>
             </li>
           </ul>
 
@@ -179,9 +176,6 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Game developer for Yandex Games</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Gold medal and a red certificate after high school graduation</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>st</sup>
